@@ -1,3 +1,8 @@
+2000-07-05  Radek Doulik  <rodo@helixcode.com>
+
+	* htmlengine-edit-selection-updater.c (updater_idle_callback):
+	disable selection if mark and cursor have the same position
+
 2000-07-05  Dan Winship  <danw@helixcode.com>
 
 	* htmllinktextmaster.c (save): 
